Adjust omlab functions Fix loading dots being cropped

--- a/src/styles/components/loaders.scss
+++ b/src/styles/components/loaders.scss
@@ -55,7 +55,7 @@
   margin-top: 1rem;
   overflow: hidden;
   padding: 2rem 0;
-  width: 2.5rem;
+  width: 3rem;
 }
 
 .dots {
